Switch build approach from fat JAR to thin JAR